Checkout page Promo Code on error button alignment issue fixed

--- a/styles/pages/_checkout.scss
+++ b/styles/pages/_checkout.scss
@@ -1,4 +1,4 @@
-.pageName {
+    .pageName {
     font-family: "Poppins";
     font-style: normal;
     font-weight: 500;
@@ -59,6 +59,12 @@
         .inner-left {
             .thumbnail-img {
                 border-radius: 0.4rem;
+            }
+        }
+        form{
+            .invalid-feedback{
+                margin-top: 0.45rem;
+                margin-left: 0.25rem;
             }
         }
     }
